[tool.poetry]
name = "pycht"
version = "0.1.0"
description = "Streetart by clustering."
authors = ["tlentali <thomas.lentali@gmail.com>"]
repository = "https://github.com/tlentali/pycht"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ['data-science', 'machine-learning', 'clustering','statistics', 'streetart', 'stencil', 'art']

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
opencv-python = "^4.10.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
