[project]
name = "pycht"
version = "0.1.18"
description = "Street art by clustering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "typer",
    "typing-extensions",
]

[project.urls]
Repository = "https://github.com/tlentali/pycht"
Documentation = "https://tlentali.github.io/pycht/"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
    "pylint>=3.3.6",
    "pylint-per-file-ignores>=1.4.0",
    "pytest>=8.3.5",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycht"]
exclude = ["tests*", "notebook*", "misc*"]

[tool.uv]
required-version = ">=0.6.11,<0.7"

[project.scripts]
pycht = "pycht.cli:app"

[tool.isort]
profile = "black"
filter_files = true

[tool.black]
line-length = 120

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores"
]
[tool.pylint."messages control"]
max-line-length = 120
disable=["missing-module-docstring", "too-few-public-methods", "R0801"]
extension-pkg-allow-list=["ujson"]
per-file-ignores= ["./tests/:missing-function-docstring"]

[tool.bumpver]
current_version = "0.1.18"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump: {old_version} → {new_version}"
tag_message = "v{new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
